--- a/package.json
+++ b/package.json
@@ -8,7 +8,5 @@
   },
   "author": "Nikoloz Lezhava",
   "license": "ISC",
-  "dependencies": {
-    "bootstrap-icons": "^1.9.1"
-  }
+  "dependencies": {}
 }
